# recsys

./: .gitignore  CHANGELOG_CONTENT_REFACTOR.md  CONTENT_VIEW_EXTENSION.md  PROGRESS.md  README.md  RESEARCH_OVERVIEW.md  RESEARCH_PROPOSAL.md  TECHNICAL_REPORT.md  ablation.ipynb  ablation_pro.ipynb  ablation_study.ipynb  analyse.ipynb  analyse_high.ipynb  analyse_pytorch.ipynb  analyse_pytorch_pro.ipynb  analyze_random_walks.py  data_precessing.ipynb  experiment_desc_similarity.ipynb  experiment_promotion.ipynb  experiments.ipynb  fix_notebook.py  multi_view_clustering.ipynb  multi_view_clustering_gemini.ipynb  pyproject.toml  readme.md  simu1.ipynb  step6_ddp_text.py  tag_cooccurrence.csv  tag_statistics.csv  train_text_sgns.py
.claude/: settings.local.json
ddp_scripts/: README.md  step6_sgns_training_ddp.py  step7_faiss_ann_ddp.py
docs/: ALL_METHODS_ORACLE_REPORT.md  APPLY_FIXES.md  CONTENT_SCALE_PLAN.md  CONTENT_VIEW_EXTENSION.md  DDP_HYBRID_GUIDE.md  DETAILED_RESULTS_ANALYSIS.md  EXPERIMENT_ANALYSIS.md  EXPERIMENT_PLAN.md  EXPERIMENT_RESULTS.md  EXPERIMENT_RESULTS_FINAL.md  EXPERIMENT_SUMMARY.md  FUSION_COMBSUM_QUICK_REF.md  IDCG_FIX_REPORT.md  METRICS_EXPLANATION.md  QUICK_REFERENCE.md  SILVER_STANDARD_DESIGN.md  analyse_pytorch_pseudocode.md  paper_presentation_methods.md
experiment1/: analyze.ipynb  processing.ipynb  processing_.ipynb
scripts/: analyze_walks.py  build_ann_index.py  data_merge.ipynb  eval_at_scale.py  expand_content_coverage.py  run_10k_experiments.py  run_content_ablation.py  run_content_at_scale.py  run_subset_scale.py  train_sgns.py
(+67 files in other folders)
